[package]
name = "tinykv"
version = "0.1.0"
edition = "2021"
description = "a distributed key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
bytes = {workspace = true}
parking_lot = {workspace = true}
heed = {workspace = true}
ouroboros = "0.18.3"
log = "0.4.20"
env_logger = "0.11.2"
strum = { version = "0.26", features = ["derive"] }
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
tokio = {workspace = true}
# async-trait = "0.1.77"
bincode = "1.3.3"
serde.workspace = true
byteorder = "1.5.0"
rand = "~0.8.3"
async-trait = "0.1.78"
futures = "0.3.30"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3"

[build-dependencies]
tonic-build = "0.11"


